# cccs

./: .gitignore  CLAUDE.md  LICENSE  README.CN.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
.kiro/specs/claude-config-switcher/: design.md  requirements.md  tasks.md
doc/: cccs.md
public/: settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  claude_detector.rs  config_service.rs  error.rs  i18n_service.rs  lib.rs  monitor_service.rs  performance_tests.rs  settings_service.rs  tray_service.rs  types.rs
