[package]
name = "cccs"
version = "1.0.0"
description = "Claude Code Configuration Switcher"
authors = ["KZAI Lab"]
license = "MIT"
repository = "https://github.com/breakstring/cccs"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1.0", features = ["time", "rt-multi-thread"] }
crc32fast = "1.4"
thiserror = "1.0"
dirs = "5.0"

# Tauri dependencies
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3.8"
